add swagger host factory and fix elastic tests
